@@ -1481,6 +1481,7 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Ulo\u017Eit datovou sadu jak
 ui.plugin.SaveDatasetAsPlugIn.saving = Ukl\u00E1d\u00E1n\u00ED
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = Nemohu nal\u00E9zt konverter pro vybran\u00FD form\u00E1t obr\u00E1zku
 ui.plugin.SaveImageAsPlugIn.save-image = Ulo\u017Eit obr\u00E1zek
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = T\:Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = Zapsat world file
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = Soubory projekt\u016F pro JUMP
 ui.plugin.SaveProjectAsPlugIn.save-project = Ulo\u017Eit projekt
