@@ -1482,6 +1482,7 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Datensatz speichern als (alt
 ui.plugin.SaveDatasetAsPlugIn.saving = Wird gespeichert
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = Es konnte f\u00fcr das Bildformat kein Erzeuger gefunden werden
 ui.plugin.SaveImageAsPlugIn.save-image = Bild speichern
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = T\:Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = Welt datei
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = JUMP Projekt-Dateien
 ui.plugin.SaveProjectAsPlugIn.save-project = Projekt speichern
