@@ -1482,6 +1482,7 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Save Dataset As (old)
 ui.plugin.SaveDatasetAsPlugIn.saving = Saving
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = Can't find writer for image format
 ui.plugin.SaveImageAsPlugIn.save-image = Save Image
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = Write world file
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = JUMP Project Files
 ui.plugin.SaveProjectAsPlugIn.save-project = Save Project
