@@ -1483,6 +1483,7 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Guardar datos como (antiguos
 ui.plugin.SaveDatasetAsPlugIn.saving = Guardar
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = No se puede guardar este formato
 ui.plugin.SaveImageAsPlugIn.save-image = Guardar imagen
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = T\:Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = Write world file
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = Archivos de proyecto OpenJUMP
 ui.plugin.SaveProjectAsPlugIn.save-project = Guardar proyecto
