@@ -1482,6 +1482,7 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Tallenna aineisto nimell\u00
 ui.plugin.SaveDatasetAsPlugIn.saving = Tallentaa
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = Tiedostomuodon tarvitsemaa ajuria ei l\u00F6ydy
 ui.plugin.SaveImageAsPlugIn.save-image = Tallenna kuva
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = T\:Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = Kirjoita world file
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = JUMP projektitiedostot
 ui.plugin.SaveProjectAsPlugIn.save-project = Tallenna projekti
