@@ -1482,7 +1482,8 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Enregistrer les donn\u00E9es
 ui.plugin.SaveDatasetAsPlugIn.saving = Enregistrer
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = Ne peut pas enregistrer l'image dans le format sp\u00E9cifi\u00E9
 ui.plugin.SaveImageAsPlugIn.save-image = Enregistrer l'image
-ui.plugin.SaveImageAsPlugIn.write-world-file = Cr\u00E9er les fichiers de g\u00E9or\u00E9f\u00E9rencement (world file)
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = Largeur (\# pixels)
+ui.plugin.SaveImageAsPlugIn.write-world-file = Cr\u00E9er le fichier de g\u00E9or\u00E9f\u00E9rencement (world file)
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = Fichiers du projet OpenJUMP
 ui.plugin.SaveProjectAsPlugIn.save-project = Enregistrer le projet
 ui.plugin.SaveProjectAsPlugIn.save-project-as = Enregistrer le projet sous
