@@ -1478,6 +1478,7 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Adathalmaz ment\u00E9se mint
 ui.plugin.SaveDatasetAsPlugIn.saving = Ment\u00E9s
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = Nincs kezel\u0151 a k\u00E9pform\u00E1tumhoz
 ui.plugin.SaveImageAsPlugIn.save-image = K\u00E9p ment\u00E9se
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = T\:Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = Vil\u00E1g f\u00E1jl \u00EDr\u00E1sa
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = JUMP projekt f\u00E1jl
 ui.plugin.SaveProjectAsPlugIn.save-project = Projekt ment\u00E9s
