@@ -1483,7 +1483,8 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset = Salva dataset
 ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Salva dataset come (vecchio)
 ui.plugin.SaveDatasetAsPlugIn.saving = In salvataggio
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = Non pu\u00F2 trovare writer per formato immagine
-ui.plugin.SaveImageAsPlugIn.save-image = Salva  immagine 
+ui.plugin.SaveImageAsPlugIn.save-image = Salva  immagine
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = T\:Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = Georeferenzia (world file)
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = JUMP file di progetto
 ui.plugin.SaveProjectAsPlugIn.save-project = Salva progetto
