@@ -1480,6 +1480,7 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = \u30C7\u30FC\u30BF\u30BB\u30
 ui.plugin.SaveDatasetAsPlugIn.saving = \u4FDD\u5B58
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = \u753B\u50CF\u5F62\u5F0F\u306E\u30E9\u30A4\u30BF\u30FC\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093
 ui.plugin.SaveImageAsPlugIn.save-image = \u753B\u50CF\u306E\u4FDD\u5B58
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = T\:Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = \u30EF\u30FC\u30EB\u30C9\u30D5\u30A1\u30A4\u30EB\u306E\u66F8\u304D\u51FA\u3057
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = JUMP \u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u30D5\u30A1\u30A4\u30EB
 ui.plugin.SaveProjectAsPlugIn.save-project = \u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u306E\u4FDD\u5B58
