@@ -1478,6 +1478,7 @@ ui.plugin.SaveDatasetAsPlugIn.save-dataset-as-old = Salvar dados como (antigo)
 ui.plugin.SaveDatasetAsPlugIn.saving = Salvando
 ui.plugin.SaveImageAsPlugIn.cannot-find-writer-for-image-format = N\u00E3o pode encontrar o gravador para o formato da imagem
 ui.plugin.SaveImageAsPlugIn.save-image = Salvar imagem
+ui.plugin.SaveImageAsPlugIn.width-in-pixels = T\:Width (\# pixels)
 ui.plugin.SaveImageAsPlugIn.write-world-file = Escrever arquivo world
 ui.plugin.SaveProjectAsPlugIn.jump-project-files = Arquivo de tarefa OpenJUMP 
 ui.plugin.SaveProjectAsPlugIn.save-project = Salvar tarefa
